# minesweeper

./: .rosinstall  .rosinstall.bak  README.md
minesweeper_localization/: CMakeLists.txt  package.xml
minesweeper_localization/launch/: localization.launch
minesweeper_localization/scripts/: data.py  sensors_parser.py
minesweeper_localization/src/: tf_pub.cpp
minesweeper_mapping/: CMakeLists.txt  package.xml
minesweeper_mapping/scripts/: .marker.py.swp  marker.py
minesweeper_mapping/srv/: Add_mine.srv
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: description.launch
robot_description/meshes/: bla.stl  link_center_left_wheel.STL  link_center_right_wheel.STL  link_chassis.STL  link_front_left_wheel.STL  link_front_right_wheel.STL  link_rear_left_wheel.STL  link_rear_right_wheel.STL  wheel.STL
robot_description/urdf/: macros.xacro  mine.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: robot_gazebo.launch
robot_viz/: CMakeLists.txt  package.xml
robot_viz/launch/: minesweeper_viz.launch
robot_viz/rviz/: mine.rviz
