<?xml version="1.0"?>
<package format="2">
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>The robot_gazebo package, which handles exporting the urdf file, launching gazebo and spawning the robot model.</description>

  <maintainer email="tamtamawy333@gmail.com">AhmedTom and co.</maintainer>


  <license>BSD</license>


  <!--author email="tamtamawy333.gmail@com">Ahmed</author-->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>robot_description</build_depend>
  <build_depend>rostopic</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>hector_gazebo_plugins</build_export_depend>
  <build_export_depend>minesweeper_description</build_export_depend>
  <build_export_depend>rostopic</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>rostopic</exec_depend>


  <export>
  </export>
</package>
